Nav menu is no longer displayed in the background after being collapsed

--- a/stylesheets/general.css
+++ b/stylesheets/general.css
@@ -123,7 +123,7 @@ body, html {
     padding: 80px 0px;
 }
 
-.page-section.striped:nth-child(odd) {
+.page-section.striped:nth-of-type(odd) {
   background: #f5f5f5;
 }
 
